# FlowBoard

./: non_Instruction_pretrain_llm_finetuning_on_domain_specific_data.ipynb  rushikesh_resume.tex
board-project/: .dockerignore  .env.example  .gitignore  README.md  TASK_FLOW_IMPLEMENTATION_PLAN.md  docker-compose.yml
board-project/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
board-project/backend/app/: __init__.py  main.py
board-project/backend/app/api/: router.py
board-project/backend/app/api/routes/: auth.py  board.py  card.py  health.py
board-project/backend/app/core/: config.py  security.py
board-project/backend/app/db/: base.py  init_db.py  session.py
board-project/backend/app/models/: __init__.py  board.py  user.py
board-project/backend/app/repos/: board_repo.py  card_repo.py  health_repo.py  user_repo.py
board-project/backend/app/schemas/: __init__.py  auth_schema.py  board_schema.py
board-project/backend/app/services/: auth_service.py  board_service.py  card_service.py  health_service.py
board-project/backend/app/tests/: test_card_move_api_e2e.py
board-project/frontend/: Dockerfile  README.md  package-lock.json  package.json
board-project/frontend/src/: App.css  App.tsx  index.css
